# product-scaper

./: .coverage  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  selectors.yaml
data/antik-bilevrany/: selectors.yaml
data/antikvariat-bohemia/: page.html  selectors.yaml
data/antikvariat-malyctenar/: page.html  selectors.yaml
data/artonpaper/: page.html  selectors.yaml  train.csv
data/trigon-knihy/: page.html  selectors.yaml
product_scraper/: __init__.py  core.py
product_scraper/extractors/: extractor.py
product_scraper/models/: product.py
product_scraper/training/: trainer.py
product_scraper_data/: product_scraper.pkl  selectors.yaml  training_data.csv
src/: ProductScaper.py  ProductScraper.py  example.py  scrape.py  tune_model.py
src/create_data/: __init__.py  select_training_data.py  selector.js
src/example_scraper_data/: selectors.yaml
src/examples/: usage_example.py
src/models/: category_classifier.pkl
src/product_scraper/: core.py  example.py  tune_model.py
src/select_data/: select_training_data.py  selector.js
src/train_model/: __init__.py  evaluate_model.py  predict_data.py  process_data.py  train_model.py
tests/: conftest.py  test_code_quality.py  test_console.py  test_evaluate_model.py  test_features.py  test_features_consistency.py  test_main_content.py  test_predict_data.py  test_process_data.py  test_product.py  test_product_scraper.py  test_productscraper_cleanup.py  test_productscraper_extra.py  test_proximity.py  test_select_training_data.py  test_train_model.py  test_ui.py  test_utils.py
(+97 files in other folders)
