[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "product-scraper"
version = "0.1.0"
description = "A Python package for scraping product information from various e-commerce websites"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.26.0",
    "beautifulsoup4>=4.9.3",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
]

[project.urls]
Homepage = "https://github.com/atOliverParkerMorgan/product-scraper"
Repository = "https://github.com/atOliverParkerMorgan/product-scraper.git"
Documentation = "https://github.com/atOliverParkerMorgan/product-scraper#readme"